# api-cofradia

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  cofradia1.0.ipynb  compose.yaml  docker-compose.yml  pruebasDDR.ipynb  pyproject.toml  requirements-w.txt  requirements.txt
.github/workflows/: master_api-cofradia.yml  pytest.yml
app/: __main__.py  main.py
app/config/: app.py  database.py  hermandades_data.json  mappings.py
app/config/logging/: logger.py  logging.yaml
app/database/: postgresdb_manager.py
app/model/: hermandades.py  marchas.py  timetables.py
app/models/: hermandades.py  marchs.py  timetables.py  user.py  users.py
app/openapi/: openapi.json
app/repository/: hermandad_repository.py  march_repository.py  timetable_repository.py  user_repository.py
app/router/: hermandad_router.py  march_router.py  timetable_router.py  user_router.py
app/schema/: hermandades.py  marchas.py  marchs.py  timetables.py  users.py
app/service/: hermandad_service.py  march_service.py  timetable_service.py  user_service.py
app/util/: hermandad_util.py  scrapping_util.py  user_util.py
src/: config.py  entrenamiento.ipynb  main.py  pruebaparametrodia.ipynb  pruebasDDR.ipynb  pruebasLS.ipynb  requirements.txt
src/app/db/: database.py
src/app/routers/: hermandades.py  marchas.py  oauth.py  (+2 more)
src/backend/: requirements.txt
src/ia/: entrenamiento.ipynb  pruebasLS.ipynb
src/testing/: celsius.py  nazarenos.ipynb  ropa.py
src/tests/: test_config.py  test_hermandades.py  test_timetables.py
training/: pruebasDDR.ipynb  training_full.ipynb
(+27 files in other folders)
